Add healthcheck for twins_test

--- a/infra/postgres/Dockerfile
+++ b/infra/postgres/Dockerfile
@@ -2,7 +2,8 @@ FROM debian:trixie-slim
 RUN apt-get update && apt-get install -y \
     phppgadmin \
     apache2 \
-    libapache2-mod-php
+    libapache2-mod-php \
+    curl
 
 EXPOSE 80
 ENTRYPOINT ["apache2ctl", "-D", "FOREGROUND"]
