--- a/pypackages/twins_test/compose.include.yaml
+++ b/pypackages/twins_test/compose.include.yaml
@@ -10,3 +10,10 @@ services:
       - default
     ports:
       - "8000:8000"
+    healthcheck:
+      # Use the single API endpoint to check service health
+      test: ["CMD-SHELL", "curl -sf http://localhost:8000/"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 30s
