Redirect index.html in PhpPgAdmin server

--- a/infra/postgres/phppgadmin/phppgadmin.conf
+++ b/infra/postgres/phppgadmin/phppgadmin.conf
@@ -4,3 +4,5 @@ Alias /phppgadmin /usr/share/phppgadmin
     AllowOverride None
     Require all granted
 </Directory>
+
+RedirectMatch ^/$ /phppgadmin
