--- a/infra/postgres/Dockerfile
+++ b/infra/postgres/Dockerfile
@@ -4,6 +4,7 @@ RUN apt-get update && apt-get install -y \
     apache2 \
     libapache2-mod-php \
     curl
+RUN rm -f /var/www/html/index.html
 
 EXPOSE 80
 ENTRYPOINT ["apache2ctl", "-D", "FOREGROUND"]
