--- a/pypackages/twins_test/compose.include.yaml
+++ b/pypackages/twins_test/compose.include.yaml
@@ -1,18 +1,33 @@
+ # Exposes the twins-test FastAPI service at http://dtp.localhost/twins/test (via Traefik).
+
 services:
   twins-test:
     build:
       context: ../../
       dockerfile: pypackages/twins_test/Dockerfile
+    command:
+      - "--host"
+      - "0.0.0.0"
+      - "--port"
+      - "8000"
+      - "-e"
+      - "polyglot_dtp.twins.test:app"
+      - "--root-path"
+      - "/twins/test"
+      - "src/"
     container_name: polyglot-dtp-twins-test
     environment:
       - TWIN_TEST_FOO=${TWIN_TEST_FOO:-default_foo}
     networks:
       - default
-    ports:
-      - "8000:8000"
+    labels:
+      - traefik.enable=true
+      - "traefik.http.routers.twins-test.rule=Host(`dtp.localhost`) && PathPrefix(`/twins/test`)"
+      - traefik.http.routers.twins-test.entrypoints=web
+      - traefik.http.routers.twins-test.middlewares=twins-test-stripprefix
+      - traefik.http.middlewares.twins-test-stripprefix.stripprefix.prefixes=/twins/test
     healthcheck:
-      # Use the single API endpoint to check service health
-      test: ["CMD-SHELL", "curl -sf http://localhost:8000/"]
+      test: ["CMD-SHELL", "curl -sf http://localhost:8000/health"]
       interval: 30s
       timeout: 5s
       retries: 3
