--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,6 +6,7 @@
         "yahyabatulu.vscode-markdown-alert",
         "bierner.github-markdown-preview",
         "ultram4rine.vscode-choosealicense",
-        "ms-azuretools.vscode-docker"
+        "ms-azuretools.vscode-docker",
+        "ms-toolsai.jupyter"
     ]
 }
