--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,7 @@
 include:
   # Use `find -name compose.include.yaml` to locate and include other compose files.
   - ./infra/postgres/compose.include.yaml
+  - ./infra/neo4j/compose.include.yaml
   - ./pypackages/twins_test/compose.include.yaml
 
 # Additional services are defined in the included compose files.
