--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,11 @@ authors = [
     { name = "Yin-Chi Chan", email = "ycc39@cam.ac.uk" },
     { name = "Anandarup Mukherjee", email = "am2910@cam.ac.uk" }
 ]
-dependencies = []
+dependencies = [
+    "gitpython>=3.1.45",
+    "python-dotenv>=1.1.1",
+    "pyyaml>=6.0.3",
+]
 license-files = ["LICEN[CS]E*", "COPYRIGHT*"]
 
 [project.urls]
