--- a/infra/neo4j/infra.yaml
+++ b/infra/neo4j/infra.yaml
@@ -1,10 +1,11 @@
-name: Neo4j
-image: neo4j:5-community
+name: neo4j
+image:
+  - neo4j:5-community
 description: Neo4j graph database
 urls:
-  - name: http
+  http:
     url: http://localhost:7474
     description: Neo4j HTTP interface
-  - name: bolt
+  bolt:
     url: bolt://localhost:7687
     description: Neo4j Bolt interface
