--- a/infra/postgres/compose.include.yaml
+++ b/infra/postgres/compose.include.yaml
@@ -26,6 +26,8 @@ services:
       retries: 5
       start_period: 30s
   phppgadmin:
+    image: yinchi/polyglot-dtp-phppgadmin:latest
+    pull_policy: always
     build:
       context: .
       dockerfile: Dockerfile
