--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# NOTE: The default values in .env.example WILL NOT WORK, you must change them.
+# Copy this file to .env and edit the values before running `docker compose` commands.
+
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_USER=dtp
@@ -5,5 +8,8 @@ POSTGRES_DB=dtp
 POSTGRES_PASSWORD=changeme
 
 NEO4J_PASSWORD=changeme
+
+# Make sure this matches infra/influx/secret/admin_token.json
+INFLUXDB3_AUTH_TOKEN=changeme
 
 TWIN_TEST_FOO='Hello, World!'
