Add pytest dependencies

--- a/pytests/pyproject.toml
+++ b/pytests/pyproject.toml
@@ -4,6 +4,8 @@ version = "0.1.0"
 requires-python = "==3.13.*"
 dependencies = [
     "gitpython>=3.1.45",
+    "influxdb3-python>=0.16.0",
+    "neo4j>=5.28.2",
     "pandas>=2.3.2",
     "psycopg>=3.2.10",
     "pydantic>=2.11.9",
