--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ authors = [
     { name = "Anandarup Mukherjee", email = "am2910@cam.ac.uk" }
 ]
 dependencies = [
+    "babel>=2.17.0",
     "gitpython>=3.1.45",
     "python-dotenv>=1.1.1",
     "pyyaml>=6.0.3",
