--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ authors = [
 dependencies = [
     "babel>=2.17.0",
     "gitpython>=3.1.45",
+    "numpy>=2.3.3",
     "python-dotenv>=1.1.1",
     "pyyaml>=6.0.3",
 ]
@@ -28,5 +29,6 @@ members = [
 [dependency-groups]
 dev = [
     "ipykernel>=6.30.1",
+    "matplotlib>=3.10.6",
     "ruff>=0.13.2",
 ]
