--- a/infra/mqtt/compose.include.yaml
+++ b/infra/mqtt/compose.include.yaml
@@ -12,7 +12,7 @@ services:
       - ./mosquitto.conf:/mosquitto/config/mosquitto.conf:ro
     healthcheck:
       # Use $$ to escape $ in docker-compose healthcheck command.
-      test: ["CMD-SHELL", "mosquitto_sub -t '$$SYS/#' -C 1 -i healthcheck -W 3"]
+      test: ["CMD-SHELL", "mosquitto_sub -t '$$SYS/broker/version' -C 1 -i healthcheck -W 3"]
       interval: 30s
       timeout: 5s
       retries: 5
