Update file associations in .vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "editor.wordWrapColumn": 100
     },
     "files.associations": {
-        "justfile": "just"
+        "justfile": "just",
+        "*.env": "properties"
     }
 }
