Update mock_sensor to run from config file
- Various documentation and bug fixes

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,11 @@
-# Environment files
-*.env
-!*.env.example
-
 # Secrets
 *.secret
+*.env
 *.key
 *.pem
 *.crt
 *secret*/
+!*.example*
 
 # Python
 __pycache__/
