Reorganize DT components; WIP: Dockerize mock sensor

--- a/data-store/influx/dt.component.yaml
+++ b/data-store/influx/dt.component.yaml
@@ -1,5 +1,6 @@
 name: influx
 description: InfluxDB time series database
+category: data-store
 services:
   - name: influx
     image: influxdb:3-core
