--- a/pypackages/mock_sensor/pyproject.toml
+++ b/pypackages/mock_sensor/pyproject.toml
@@ -8,6 +8,7 @@ authors = [
 ]
 requires-python = "==3.13.*"
 dependencies = [
+    "click>=8.3.0",
     "paho-mqtt>=2.1.0",
     "pydantic>=2.11.9",
     "pydantic-settings>=2.11.0",
