--- a/pypackages/mock_sensor/pyproject.toml
+++ b/pypackages/mock_sensor/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "pydantic>=2.11.9",
     "pydantic-settings>=2.11.0",
     "python-dotenv>=1.1.1",
+    "pyyaml>=6.0.3",
 ]
 
 [build-system]
