Fix PhpPgaAmin service setup (default server, pull policy)

--- a/data-store/postgres/compose.include.yaml
+++ b/data-store/postgres/compose.include.yaml
@@ -27,7 +27,7 @@ services:
       start_period: 30s
   phppgadmin:
     image: yinchi/polyglot-dtp-phppgadmin:latest
-    pull_policy: always
+    pull_policy: build
     build:
       context: .
       dockerfile: Dockerfile
