Rename/reorgainze services (test_api)

--- a/.example.env
+++ b/.example.env
@@ -12,4 +12,4 @@ NEO4J_PASSWORD=changeme
 # Make sure this matches infra/influx/secret/admin_token.json
 INFLUXDB3_AUTH_TOKEN=changeme
 
-TWIN_TEST_FOO='Hello, World!'
+TEST_API_FOO='Hello, World!'
