--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -7,6 +7,7 @@
         "bierner.github-markdown-preview",
         "ultram4rine.vscode-choosealicense",
         "ms-azuretools.vscode-docker",
-        "ms-toolsai.jupyter"
+        "ms-toolsai.jupyter",
+        "pomdtr.markdown-kroki"
     ]
 }
